# advent-of-rust-2021

./: Cargo.toml  README.md  scaffold_day.rb
src/: input_read.rs  lib.rs
