[package]
name = "advent-of-rust-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[dependencies]
itertools = "0.10.1"
regex = "1.5.4"
lazy_static = "1.4.0"